<resources>
    <string name="app_name">Chronoscopy</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="regret">Regret</string>
    <string name="skill">Skill</string>
    <string name="fun">Fun</string>
    <string name="responsibility">Responsibility</string>
    <string name="leisure">Leisure</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="error_date">Use format \'YYYY-MM-DD\'</string>
    <string name="todays_score">Today\'s Score</string>
    <string name="spent_time">Spent Time</string>
    <string name="evaluation">Evaluation</string>
    <string name="title_activity_new_activity">New Activity</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="error_time">Use format \'(h)h:mm\', or just minutes</string>
    <string name="save">Save</string>
    <string name="invalid_inputs">Some inputs are invalid</string>
    <string name="satisfaction">How satisfied are you with your day?</string>
    <string name="export">Export data</string>
    <string name="error_export">Error while exporting data</string>
</resources>
